--- a/services.html
+++ b/services.html
@@ -1,214 +1,306 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-<style>
-@font-face {
-  font-family: 'CMU Sans Serif';
-  src: url('fonts/CMUSansSerif-Regular.ttf') format('truetype');
-  /* Add other font formats (e.g., woff, woff2) for better browser support */
-}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Bowen Yi - Awards</title>
 
-/* Apply the CMU Sans Serif font to elements with the class "cmu-sans-serif" */
-.cmu-sans-serif {
-  font-family: 'CMU Sans Serif', sans-serif;
-}
-  </style>
-    <style>
-    .justified-text {
-      text-align: justify;
-    }
-  </style>
-  <style>
-    .gray-line {
-      border-top: 1px solid #ccc;
-    }
-  </style>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="stylesheets/github-light.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bowen Yi</title>
+  <link rel="stylesheet" href="assets/css/academicons.min.css">
+  <link rel="stylesheet" href="assets/css/academicons.css">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <!-- ===== Page Style (LEFT SIDEBAR UNCHANGED) ===== -->
+  <style>
+    body {
+      font-family: Georgia, "Times New Roman", Times, serif;
+      color: #222;
+      line-height: 1.6;
+    }
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-29643011-3', 'auto');
-      ga('send', 'pageview');
-    </script>
+    h1, h2, h3 {
+      color: #1f2a44;
+      font-weight: 600;
+    }
 
-    <!-- For all browsers -->
-    <link rel="stylesheet" href="assets/css/academicons.min.css"/>
-    <link rel="stylesheet" href="assets/css/academicons.css"/>
+    a {
+      color: #1f2a44;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .gray-line {
+      border-top: 1px solid #dddddd;
+      margin: 6px 0 16px 0;
+    }
+
+    /* ===== Align main content with existing layout ===== */
+    section {
+      margin-left: 260px;
+    }
+
+    /* ===== Placeholder text ===== */
+    .placeholder {
+      color: #666;
+      font-style: italic;
+      margin-top: 12px;
+    }
     
-    <style>
-      button.accordion {
-      font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-      cursor: pointer;
-      padding: 0px;
-      border: none;
-      text-align: left;
-      outline: none;
-      font-size: 100%;
-      transition: 0.3s;
-      background-color: #f8f8f8;
-      }
-      button.accordion.active, button.accordion:hover {
-      background-color: #f8f8f8;
-      }
-      button.accordion:after {
-      content: " [+] ";
-      font-size: 90%;
-      color:#777;
-      float: left;
-      margin-left: 1px;
-      }
+  .awards-list {
+    margin-top: 10px;
+  }
 
-      button.accordion.active:after {
-      content: " [\2212] ";
-      }
-      div.panel {
-      padding: 0 20px;
-      margin-top: 5px;
-      display: none;
-      background-color: white;
-      font-size: 100%;
-      }
-      div.panel.show {
-      display: block !important;
-      }
-      .social-row {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-      }
-    .social-row21 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row3 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-    .social-row1 {        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-.social-row2 {display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-}
-    </style>
-  </head>
-  <body>
+  .award-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px 0;
+    border-bottom: 1px dashed #cccccc;
+  }
 
+  .award-item:last-child {
+    border-bottom: none;
+  }
 
+  .award-main {
+    max-width: 85%;
+    font-size: 0.95em;
+  }
 
+  .award-year {
+    font-weight: 600;
+    color: #1f2a44;
+    white-space: nowrap;
+    margin-left: 15px;
+  }
+  
+  .grants-list {
+    margin-top: 12px;
+  }
+
+  .grant-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 14px 16px;
+    margin-bottom: 14px;
+    border: 1px solid #dddddd;
+    background: #fafafa;
+    border-radius: 4px;
+  }
+
+  .grant-main {
+    max-width: 88%;
+    font-size: 0.95em;
+  }
+
+  .grant-meta {
+    display: inline-block;
+    margin-top: 4px;
+    font-size: 0.85em;
+    color: #555;
+  }
+
+  .grant-badge {
+    font-size: 0.8em;
+    font-weight: 600;
+    color: #1f2a44;
+    border: 1px solid #1f2a44;
+    padding: 4px 8px;
+    border-radius: 3px;
+    white-space: nowrap;
+    margin-left: 14px;
+  }
+
+  .service-card {
+    border: 1px solid #dddddd;
+    background: #fafafa;
+    padding: 12px 16px;
+    margin: 12px 0;
+    border-radius: 4px;
+    font-size: 0.95em;
+  }
+
+  .service-meta {
+    display: block;
+    margin-top: 4px;
+    font-size: 0.85em;
+    color: #555;
+  }
+
+  .service-list {
+    margin: 6px 0 0 18px;
+  }
+
+  .service-list li {
+    margin-bottom: 4px;
+  }
+
+  </style>
+</head>
+
+<body>
 <div class="wrapper">
 
-    <header>
-        <h1>Bowen Yi</h1>
-        衣博文 <br><br>
-      <p>Assistant Professor<br>
-      <a href="https://www.polymtl.ca/ge/">Dept. Electrical Engineering</a>
-       <br> 
-       Polytechnique Montreal</p>
-        
-    <h3><a href="https://bwyi.github.io/">Home</a></h3>
-        <h3><a href="research.html">Research</a> </h3>
-        <h3><a href="publication.html">Publications</a></h3>
-        <h3><a href="services.html">Services</a></h3>
-        <h3><a href="position.html">Positions</a></h3>
+  <!-- ================= LEFT SIDEBAR (STRICT COPY) ================= -->
+  <header>
+    <h1>Bowen Yi</h1>
+    衣博文
+    <br><br>
 
-<b>Social</b><br>
-      <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:bowen.yi@polymtl.ca" class="author-social" target="_blank">Email</a><br>
-          <a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i></a><a href="https://orcid.org/0000-0002-0517-9519">ORCID</a><br>
-          <a href="https://orcid.org/0000-0002-0517-9519"><i class="ai ai-fw ai-orcid-square"></i></a><a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a><br>
-          <a href="https://www.researchgate.net/profile/Bowen_Yi"><i class="fa fa-fw fa-share-alt-square"></i>Researchgate</a><br>
-          <a href="https://www.linkedin.com/in/yibowen1992/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a></span></a><span class="social-row2"><br>
-          <a href="https://www.zhihu.com/people/b.yi"><i class="fa fa-fw fa-share-alt-square"></i> 知乎</a></span><br>
-          <br>
-        </div>
-        <p><b>Contact:</b><br>
-Lassonde Pavillon<br>2700 Chemin de la Tour<br>Montreal, QC, H3T 1J4<br>Canada</p>
-        <p>Tel: +61 04 6761 1727</p>
-        <p>&nbsp;</p>
-      <p>&nbsp;</p>
-    </header>
-      <section>
+    <p>
+      Assistant Professor<br>
+      <a href="https://www.polymtl.ca/ge/">Department of Electrical Engineering</a><br>
+      Polytechnique Montréal
+    </p>
+
+    <h3><a href="index.html">Home</a></h3>
+    <h3><a href="research.html">Research</a></h3>
+    <h3><a href="publication.html">Publications</a></h3>
+    <h3><a href="teaching.html">Teaching</a></h3>
+    <h3><a href="people.html">People</a></h3>
+    <h3><a href="awards.html">Awards</a></h3>
+    <h3><a href="services.html">Services</a></h3>
+    <h3><a href="position.html">Positions</a></h3>
+    <h3><a href="misc.html">Misc</a></h3>
+  </header>
+
+  <!-- ================= MAIN CONTENT ================= -->
+  
+<section>
+
+  <h2>Professional Services</h2>
+  <div class="gray-line"></div>
+
+  <!-- ===== Academic & Institutional Service ===== -->
+  <h3>Academic & Institutional Service</h3>
+
+  <div class="service-card">
+    <strong>Member</strong>, Comité de recrutement du département<br>
+    <span class="service-meta">Polytechnique Montréal · 2025 – present</span>
+  </div>
+
+  <!-- ===== Editorial & Conference Roles ===== -->
+  <h3>Editorial & Conference Roles</h3>
+
+  <div class="service-card">
+    <strong>Member</strong>, Conference Editorial Board, IEEE Control Systems Society (ACC, CDC, CCTA)<br>
+    <span class="service-meta">2025 – present</span>
+  </div>
+
+  <div class="service-card">
+    <strong>Associate Editor</strong>, 15th IFAC Workshop on Adaptive and Learning Control Systems (ALCOS 2025)
+  </div>
 
 
 
-     <h2><span class="cmu-sans-serif" style="color: darkblue;">Professional Services   <div class="gray-line"></div> </span></h2>  
+  <!-- ===== Workshops & Invited Organization ===== -->
+  <h3>Workshops & Invited Sessions</h3>
 
-        <p class="social-row2">- Teaching:</p>
-        <ul>
-        <li>Lecture
-            <ul>
-              <li>ELE6202: Multivariable Systems, Polytechnique Montreal, Fall 2024</li>
-            </ul>
-          </li>
-          <li>Tutor (for Lab/Tutorial)
-            <ul>
-              <li>AMME 3500: Systems Dynamics and Control, USYD, Sydney, Australia, Semmester 1, 2020</li>
-              <li>AMME 3500: Systems Dynamics and Control, USYD, Sydney, Australia, Semmester 1, 2021</li>
-            </ul>
-          </li>
-          <li>Teaching Assistant
-            <ul>
-              <li>P032501: Advanced Process Control, SJTU, Shanghai, China, Fall 2015          </li>
-            </ul>
-          </li>
-        </ul>
-        <p class="social-row2">- Reviewer for Mathematical Reviews (since 2020, Number: 152427) - the American Mathematical Society</p>
-        <p class="social-row2">-  Review Editor (Control Theory) for Frontiers in Control Engineering        </p>
-        <p class="social-row2">- Journal Reviewers (more than 20 journals)</p>
-        <ul>
-          <li>Automatica</li>
-          <li>Systems &amp; Control Letters</li>
-          <li>European Journal of Control</li>
-          <li>International Journal of Robust and Nonlinear Control</li>
-          <li>IEEE Robotics and Automation Letters</li>
-          <li>IEEE Control Systems Letters</li>
-          <li>Scientifc Reports</li>
-          <li>IEEE Trans. on Automatic Control</li>
-          <li>IEEE Trans. on Control Systems Technology</li>
-        </ul>
-        <p>- Conference Reviewer</p>
-        <ul>
-          <li>IEEE Conference on Decision and Control （CDC'18-21)</li>
-          <li>IEEE Conference on Robotics and Automation (ICRA'19-20)</li>
-          <li>IEEE/RSJ Int. Conference on Intelligent Robots and Systems (21)</li>
-          <li>American Control Conference (ACC'19-21)</li>
-          <li>IEEE Conference on Control Technolgy and Application (CCTA'19-20)</li>
-          <li>Chinese Control Conference (CCC'16)</li>
-          <li>IFAC World Congress (IFAC WC'20)</li>
-          <li>IFAC Symposium on Nonlinear Control Systems (NOLCOS'19)</li>
-        </ul>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
+<div class="service-card">
+  <strong>Organizer</strong> (with Yongping Pan, Sayan Basu Roy, Alexey Bobtsov, and Romeo Ortega)<br>
+  “Modern Adaptive Control and Estimation: From Theory and Applications”<br>
+  <span class="service-meta">
+    Pre-conference workshop at
+    62nd IEEE Conference on Decision and Control (CDC 2023), Singapore<br>
+    <a href="https://cdc-acae.github.io" target="_blank">
+      https://cdc-acae.github.io
+    </a>
+  </span>
+</div>
+  <div class="service-card">
+    <strong>Organizer</strong> (with Prof. Lei Wang)<br>
+    Invited session “Adaptive Parameter Estimation and Control”<br>
+    <span class="service-meta">
+      12th IFAC Symposium on Nonlinear Control Systems (NOLCOS 2022), Canberra, Australia
+    </span>
+  </div>
 
-<p>&nbsp;</p>
-        <p>&nbsp;</p>
-<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming soon.</p></div><br>
-      </section>
-    </div>
+  <div class="service-card">
+    <strong>Keynote Speaker</strong><br>
+    IEEE CDC Workshop 2023, Singapore
+  </div>
 
-  </body>
+  <!-- ===== Session Chair ===== -->
+  <h3>Session Chair</h3>
+
+  <div class="service-card">
+    IFAC ALCOS 2025 – FrAT2 “Adaptive Observers and Estimators”<br>
+    <span class="service-meta">Mexico City, Mexico</span>
+  </div>
+
+  <div class="service-card">
+    IFAC NOLCOS 2022 – ThC3 “Adaptive Parameter Estimation and Control”<br>
+    <span class="service-meta">Canberra, Australia</span>
+  </div>
+
+  <!-- ===== Reviewing Activities ===== -->
+  <h3>Reviewing Activities</h3>
+
+  <div class="service-card">
+    <strong>Reviewer</strong>, Mathematical Reviews (Reviewer No. 152427)<br>
+    <span class="service-meta">Since 2020</span>
+  </div>
+
+  <div class="service-card">
+    <strong>Journal Reviewer</strong> for more than 30 journals, including:
+    <ul class="service-list">
+      <li>IEEE Transactions on Automatic Control</li>
+      <li>IEEE Transactions on Robotics</li>
+      <li>Automatica</li>
+      <li>Systems & Control Letters</li>
+      <li>IEEE Transactions on Control Systems Technology</li>
+      <li>IEEE Robotics and Automation Letters</li>
+      <li>IEEE Transactions on Aerospace and Electronic Systems</li>
+      <li>European Journal of Control</li>
+      <li>International Journal of Robust and Nonlinear Control</li>
+    </ul>
+  </div>
+
+  <div class="service-card">
+    <strong>Conference Reviewer</strong>
+    <ul class="service-list">
+      <li>IEEE Conference on Decision and Control (CDC 2018–2025)</li>
+      <li>IEEE International Conference on Robotics and Automation (ICRA 2020–2023)</li>
+      <li>IEEE Conference on Control Technology and Applications (CCTA 2019–2024)</li>
+      <li>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021)</li>
+      <li>American Control Conference (ACC 2019–2024)</li>
+      <li>European Control Conference (ECC 2023)</li>
+      <li>IFAC World Congress (2020–2023)</li>
+      <li>IFAC Symposium on Nonlinear Control Systems (NOLCOS 2019–2022)</li>
+    </ul>
+  </div>
+
+  <!-- ===== Grant Reviewing ===== -->
+  <h3>Grant Reviewing</h3>
+
+  <div class="service-card">
+    <ul class="service-list">
+      <li>Natural Sciences and Engineering Research Council of Canada (NSERC), 2025 – present</li>
+      <li>Research Manitoba, Canada, 2025 – present</li>
+      <li>Fonds de recherche du Québec (Master’s Scholarships), 2025 – present</li>
+    </ul>
+  </div>
+
+  <!-- ===== Committees ===== -->
+  <h3>Committees</h3>
+
+  <div class="service-card">
+    <strong>International Program Committee (IPC) Member</strong><br>
+    15th IFAC Workshop on Adaptive and Learning Control Systems (ALCOS 2025)<br>
+    <span class="service-meta">Mexico City, Mexico</span>
+  </div>
+
+</section>
+
+
+</div>
+</body>
 </html>
+
